--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <groupId>com.github.hakjdb</groupId>
-    <artifactId>hakjdbjava</artifactId>
+    <artifactId>hakjdb-java</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>hakjdb-java</name>
     <description>Java client library for HakjDB in-memory key-value data store.</description>
