--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,8 @@
                 <version>3.13.0</version>
                 <configuration>
                     <release>8</release>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
 
